<resources>
    <string name="app_name">VideoProject</string>
    <string name="popular">热门</string>
    <string name="kol">网红</string>
    <string name="actor">演员</string>
    <string name="singer">歌手</string>
    <string name="awards">主要奖项</string>
    <string name="presenter">主持</string>
    <string name="model">模特</string>
    <string name="sport">运动员</string>
    <string name="name">名人粉丝互动平台</string>
    <string name="userName">马可</string>
    <string name="settings">设定</string>
    <string name="purchase">购买记录</string>
    <string name="chenHe">陈赫</string>
    <string name="chenHeOccupation">演员、歌手、主持人</string>
    <string name="chenHeMasterwork">爱情公寓\n你好，李焕英\n奔跑吧兄弟\n你好，李焕英\n爱情回来了</string>
    <string name="chenHeAwards"> 2019年福布斯中国名人榜第一百名</string>
    <string name="chenHeChatPrice">¥800</string>
    <string name="chenHeVideoPrice">¥20,000</string>
    <string name="zhangTianAi">张天爱</string>
    <string name="zhangTianAiAwards">2018年全国向上向善崇义友善好青年\n第1届金骨朵奖网络剧最佳女主角奖\n中国原创文学风云榜年度最受欢迎演员奖\n2015年第2届横店影视文荣奖最佳女配角奖</string>
    <string name="zhangTianAiMasterwork">中国机长\n太子妃升职记\n建军大业\n爱情进化论</string>
    <string name="zhangTianAiChatPrice">¥800</string>
    <string name="zhangTianAiVideoPrice">¥20,000</string>
    <string name="chenLong">谌龙</string>
    <string name="chenLongOccupation">羽毛球运动员</string>
    <string name="chenLongAwards">2016年里约奥运会男单冠军\n2012年伦敦奥运会男单季军\n2011年丹麦羽毛球超级赛男单冠军\n2010年中国羽毛球公开赛男单冠军</string>
    <string name="chenLongChatPrice">¥800</string>
    <string name="chenLongVideoPrice">¥20,000</string>
    <string name="jiaLing">贾玲</string>
    <string name="jiaLingOccupation">演员、导演、编剧</string>
    <string name="jiaLingMasterwork">喜乐街\n大话捧逗\n芝麻开门\n欢喜密探</string>
    <string name="jiaLingAwards">自编自导自演的电影《你好，李焕英》成为全球单片票房最高的女导演\n2016网易时尚盛典年度最佳喜剧人</string>
    <string name="jiaLingChatPrice">¥800</string>
    <string name="jiaLingVideoPrice">¥20,000</string>
    <string name="zhangJingChu">张静初</string>
    <string name="zhangJingChuAwards">第6届华语电影传媒大奖最佳女主角奖\n第30届开罗国际电影节最佳女主角奖\n第29届中国电影金鸡奖最佳女主角提名\n第27届香港电影金像奖最佳女主角提名</string>
    <string name="zhangJingChuMasterwork">孔雀\n花腰新娘\n芳香之旅\n红河</string>
    <string name="zhangJingChuChatPrice">¥800</string>
    <string name="zhangJingChuVideoPrice">¥20,000</string>
    <string name="panXiaoTing">潘晓婷</string>
    <string name="panXiaoTingOccupation">台球花式九球打法选手</string>
    <string name="panXiaoTingAwards">中国的“九球天后”\n中国台球界第一位获得世界锦标赛冠军的选手\n10次9球世界冠军记录保持者\n2010年广州亚运会美式九球单打冠军</string>
    <string name="panXiaoTingChatPrice">¥400</string>
    <string name="panXiaoTingVideoPrice">¥10,000</string>
    <string name="huiRuoQi">惠若琪</string>
    <string name="huiRuoQiOccupation">排球运动员</string>
    <string name="huiRuoQiAwards">前女排国家队队长\n2016年里约奥运会冠军\n2011年、2015年亚洲女排锦标赛冠军\n2014年世锦赛亚军</string>
    <string name="huiRuoQiChatPrice">¥400</string>
    <string name="huiRuoQiVideoPrice">¥10,000</string>
    <string name="wangNan">王楠</string>
    <string name="wangNanOccupation">乒乓球运动员、团中央宣传部文体处处长</string>
    <string name="wangNanAwards">2008年北京奥运会女单女团冠军\n2008年第49届广州世乒赛女团冠军\n2004年雅典奥运会女双冠军</string>
    <string name="wangNanChatPrice">¥400</string>
    <string name="wangNanVideoPrice">¥10,000</string>
    <string name="zhangGuoWei">张国伟</string>
    <string name="zhangGuoWeiOccupation">跳高运动员</string>
    <string name="zhangGuoWeiAwards">2015年国际田联钻石联赛奥斯陆站冠军\n2015年北京田径世锦赛亚军\n2013年打破跳高室内全国纪录</string>
    <string name="zhangGuoWeiChatPrice">¥400</string>
    <string name="zhangGuoWeiVideoPrice">¥10,000</string>
    <string name="baoBeiEr">包贝尔</string>
    <string name="baoBeiErOccupation">演员、导演</string>
    <string name="baoBeiMasterwork">“大”人物\n致我们终将逝去的青春\n港囧</string>
    <string name="baoBeiAwards">第二届网影盛典年度十佳网络剧导演\n第31届中国电影金鸡奖最佳男主角奖\n第32届大众电影百花奖最佳男配角</string>
    <string name="baoBeiErChatPrice">¥400</string>
    <string name="baoBeiErVideoPrice">¥10,000</string>
    <string name="huangShenYi">黄圣依</string>
    <string name="huangShenYiOccupation">演员、歌手、出品人</string>
    <string name="huangShenYiMasterwork">功夫\n天仙配\n碧血剑</string>
    <string name="huangShenYiAwards">第24届香港电影金像奖最佳新人奖提名\n第12届中国电影表演艺术学会最佳新人奖\n第15届中国电影华鼎奖最佳女主角奖</string>
    <string name="huangShenYiChatPrice">¥400</string>
    <string name="huangShenYiVideoPrice">¥10,000</string>
    <string name="duChun">杜淳</string>
    <string name="duChunMasterwork">敌营十八年\n虎胆雄心\n走西口</string>
    <string name="duChunAwards">第12届澳门国际电影节最佳男配角奖\n第31届电视剧“飞天奖”</string>
    <string name="duChunChatPrice">¥200</string>
    <string name="duChunVideoPrice">¥5,000</string>
    <string name="zhouWeiTong">周韦彤</string>
    <string name="zhouWeiTongOccupation">模特、演员、主持人</string>
    <string name="zhouWeiTongMasterwork">夏日里的春天\n大荒野\n决战刹马镇</string>
    <string name="zhouWeiTongAwards">第六届中国模特之星大赛冠军\n第六届模特之星最受欢迎模特奖</string>
    <string name="zhouWeiTongChatPrice">¥200</string>
    <string name="zhouWeiTongVideoPrice">¥5,000</string>
    <string name="candiceZhou">赵茜</string>
    <string name="candiceZhouOccupation">模特、演员</string>
    <string name="candiceZhouAwards">蒙特利尔国际花环奖电影节“最佳女主角奖”\n第35届国际比基尼小姐大赛全球亚军、秋季女郎</string>
    <string name="candiceZhouChatPrice">¥200</string>
    <string name="candiceZhouVideoPrice">¥5,000</string>
    <string name="jinDaChuan">金大川</string>
    <string name="jinDaChuanAwards">第11届年度先生盛典年度模特\n2014搜狐时尚盛典年度超级男模\n第十六届中国模特之星男模组季军</string>
    <string name="jinDaChuanChatPrice">¥400</string>
    <string name="jinDaChuanVideoPrice">¥10,000</string>
    <string name="louWaiMan">卢慧敏</string>
    <string name="louWaiManMasterwork">Kai Pop\n身后事务所</string>
    <string name="louWaiManChatPrice">¥400</string>
    <string name="louWaiManVideoPrice">¥10,000</string>
    <string name="jackWong">王腾毅</string>
    <string name="jackWongAwards">2014伊林璀璨之星</string>
    <string name="jackWongChatPrice">¥200</string>
    <string name="jackWongVideoPrice">¥5,000</string>
    <string name="zhangBiChen">张碧晨</string>
    <string name="zhangBiChenOccupation">流行乐歌手</string>
    <string name="zhangBiChenMasterwork">曾经守候\n凉凉\n年轮\n开往早晨的午夜</string>
    <string name="zhangBiChenAwards">2017亚洲金曲大赏内地最受欢迎女歌手奖</string>
    <string name="zhangBiChenChatPrice">¥400</string>
    <string name="zhangBiChenVideoPrice">¥10,000</string>
    <string name="liJian">李健</string>
    <string name="liJianMasterwork">传奇\n风吹麦浪\n贝加尔湖畔</string>
    <string name="liJianAwards">全球华语音乐榜中榜内地最佳创作歌手</string>
    <string name="liJianChatPrice">¥200</string>
    <string name="liJianVideoPrice">¥5,000</string>
    <string name="leoLi">李莎旻子</string>
    <string name="leoLiOccupation">歌手、主持人、演员</string>
    <string name="leoLiMasterwork">一站到底\n开门大吉\n无话，不说</string>
    <string name="leoLiChatPrice">¥200</string>
    <string name="leoLiVideoPrice">¥5,000</string>
    <string name="chat">聊天</string>
    <string name="chatDescription"></string>
    <string name="ip">叶莺</string>
    <string name="ipMasterwork">只愿爱是手中线</string>
    <string name="ipChatPrice">¥200</string>
    <string name="ipVideoPrice">¥5,000</string>
    <string name="laujyuning">刘宇宁</string>
    <string name="laujyuningOccupation">歌手、演员</string>
    <string name="laujyuningMasterwork">让酒\n想象\n乞丐\n如约</string>
    <string name="laujyuningAwards">2019年第23届全球华语榜中榜年度最佳新人奖</string>
    <string name="laujyuningChatPrice">¥200</string>
    <string name="laujyuningVideoPrice">¥5,000</string>
    <string name="emiWong">王艾米</string>
    <string name="emiWongOccupation">网红</string>
    <string name="emiWongMasterwork">香港著名健身网红</string>
    <string name="emiWongChatPrice">¥200</string>
    <string name="emiWongVideoPrice">¥5,000</string>
    <string name="nanaChan">陈茜茜</string>
    <string name="nanaChanMasterwork">美妆网红</string>
    <string name="nanaChanChatPrice">¥200</string>
    <string name="nanaChanVideoPrice">¥5,000</string>
    <string name="kwok">郭聪明</string>
    <string name="kwokMasterwork">耗尽</string>
    <string name="kwokAwards">克劳锐“2019年度最具影响力主播”</string>
    <string name="kwokChatPrice">¥200</string>
    <string name="kwokVideoPrice">¥5,000</string>
    <string name="chau">周二珂</string>
    <string name="chauOccupation">网红、歌手</string>
    <string name="chauMasterwork">三角题\n孤独她呀</string>
    <string name="chauAwards">入选2019年福布斯中国30岁以下精英榜</string>
    <string name="chauChatPrice">¥200</string>
    <string name="chauVideoPrice">¥5,000</string>
    <string name="ng">吴佳煜</string>
    <string name="ngMasterwork">Say Goodbye</string>
    <string name="ngAwards">“我是头条·2017年今日头条年度盛典”年度抖音达人\n第五届 “中国品牌·文娱”年度盛典“年度新锐艺人”奖</string>
    <string name="ngChatPrice">¥200</string>
    <string name="ngVideoPrice">¥5,000</string>
    <string name="masterpiece">代表作</string>
    <string name="fiveStarRating">5.0</string>
    <string name="fourStarRating">4.0</string>
    <string name="threeStarRating">3.0</string>
    <string name="twoStarRating">2.0</string>
    <string name="oneStarRating">1.0</string>
    <string name="ruiruoqiChat">我的梦想是进入国家排球队，有什么建议吗?</string>
    <string name="zhangBiChenChat">我很喜欢听你唱歌，什么时候开演唱会?</string>
    <string name="chenHeChat">你在爱情公寓裹面，演戏的灵感是从...</string>
    <string name="jackWongChat">最近都比较忙, 为时装走秀作准备</string>
    <string name="yesterday">昨天</string>
    <string name="makCheungChing">麦长青</string>
    <string name="makCheungChingMasterwork">巾帼枭雄之义海豪情\n茶是故乡浓</string>
    <string name="makCheungChingAwards">第十六届亚洲电视大奖最佳男配角\n第43届万千星辉颁奖典典礼最佳男配角</string>
    <string name="makCheungChingChatPrice">¥200</string>
    <string name="makCheungChingVideoPrice">¥5,000</string>
    <string name="title_activity_celebrity2">celebrityActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>